objects/asb_BannerImage__c.object
<CustomObject><fields>
        <fullName>Banner__c</fullName>
        <description>The banner of which this image is a part.</description>
        <inlineHelpText>The banner of which this image is a part.</inlineHelpText>
        <label>Banner</label>
        <referenceTo>asb_Banner__c</referenceTo>
        <relationshipLabel>Banner Images</relationshipLabel>
        <relationshipName>BannerImages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>ImageAttachmentId__c</fullName>
        <description>The id of the attachment that has the image.</description>
        <inlineHelpText>The id of the attachment that has the image.</inlineHelpText>
        <label>Image Attachment Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Link__c</fullName>
        <description>The URL the user is directed to after clicking on the banner image.</description>
        <inlineHelpText>The URL the user is directed to after clicking on the banner image.</inlineHelpText>
        <label>Link</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <description>The order in which this image should show up in rotation on the banner.</description>
        <inlineHelpText>The order in which this image should show up in rotation on the banner.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Target__c</fullName>
        <description>The window to be used for the redirection link when the user clicks on the banner.</description>
        <inlineHelpText>The window to be used for the redirection link when the user clicks on the banner.</inlineHelpText>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Images that are shown in rotation on a banner in the store.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Banner Image</label><nameField>
        <label>Banner Image Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Banner Images</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>